// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switch demo -- checked 1`] = `
.emotion-10 {
  position: relative;
  border-radius: 2px;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  background: #ffffff;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  border-width: 1px;
  line-height: 16px;
}

.emotion-10:hover {
  border-color: #3357df;
}

.emotion-10:hover .emotion-7 {
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.emotion-10 .emotion-7 {
  background: #ffffff;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  width: 20px;
  height: 20px;
}

.emotion-10 .emotion-5 {
  background: #f44336;
  left: 13px;
  height: 10px;
}

.emotion-10 .emotion-9 {
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #f6f6fb;
}

.emotion-10 .emotion-1,
.emotion-10 .emotion-3 {
  line-height: 16px;
}

.emotion-10 .emotion-1 {
  padding-right: 20px;
}

.emotion-10 .emotion-3 {
  padding-left: 20px;
}

.emotion-10 .emotion-9 {
  color: #4cd964;
  border-color: #9effa5;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #edfff2;
}

.emotion-10 .emotion-7 {
  left: 100%;
  margin-left: -19px;
}

.emotion-10 .emotion-5 {
  background: #4cd964;
}

.emotion-10 .emotion-3 {
  display: none;
}

.emotion-8 {
  position: relative;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.emotion-0 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: block;
}

.emotion-2 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: block;
}

.emotion-6 {
  position: absolute;
  display: inline-block;
  left: -1px;
  top: -2px;
  border-radius: 2px;
  box-sizing: border-box;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.emotion-4 {
  position: absolute;
  display: inline-block;
  left: 18px;
  top: 4px;
  width: 2px;
  height: 16px;
  border-radius: 1px;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.emotion-22 {
  position: relative;
  border-radius: 2px;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  background: #ffffff;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  border-width: 1px;
  line-height: 16px;
}

.emotion-22:hover {
  border-color: #3357df;
}

.emotion-22:hover .emotion-7 {
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.emotion-22 .emotion-7 {
  background: #ffffff;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  width: 20px;
  height: 20px;
}

.emotion-22 .emotion-5 {
  background: #f44336;
  left: 13px;
  height: 10px;
}

.emotion-22 .emotion-9 {
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #f6f6fb;
}

.emotion-22 .emotion-1,
.emotion-22 .emotion-3 {
  line-height: 16px;
}

.emotion-22 .emotion-1 {
  padding-right: 20px;
}

.emotion-22 .emotion-3 {
  padding-left: 20px;
}

.emotion-22 .emotion-1 {
  display: none;
}

.emotion-10 {
  position: relative;
  border-radius: 2px;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  background: #ffffff;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  border-width: 1px;
  line-height: 16px;
}

.emotion-10:hover {
  border-color: #3357df;
}

.emotion-10:hover .emotion-7 {
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.emotion-10 .emotion-7 {
  background: #ffffff;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  width: 20px;
  height: 20px;
}

.emotion-10 .emotion-5 {
  background: #f44336;
  left: 13px;
  height: 10px;
}

.emotion-10 .emotion-9 {
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #f6f6fb;
}

.emotion-10 .emotion-1,
.emotion-10 .emotion-3 {
  line-height: 16px;
}

.emotion-10 .emotion-1 {
  padding-right: 20px;
}

.emotion-10 .emotion-3 {
  padding-left: 20px;
}

.emotion-10 .emotion-9 {
  color: #4cd964;
  border-color: #9effa5;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #edfff2;
}

.emotion-10 .emotion-7 {
  left: 100%;
  margin-left: -19px;
}

.emotion-10 .emotion-5 {
  background: #4cd964;
}

.emotion-10 .emotion-3 {
  display: none;
}

.emotion-8 {
  position: relative;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.emotion-0 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: block;
}

.emotion-2 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: block;
}

.emotion-6 {
  position: absolute;
  display: inline-block;
  left: -1px;
  top: -2px;
  border-radius: 2px;
  box-sizing: border-box;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.emotion-4 {
  position: absolute;
  display: inline-block;
  left: 18px;
  top: 4px;
  width: 2px;
  height: 16px;
  border-radius: 1px;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.emotion-22 {
  position: relative;
  border-radius: 2px;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  background: #ffffff;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  border-width: 1px;
  line-height: 16px;
}

.emotion-22:hover {
  border-color: #3357df;
}

.emotion-22:hover .emotion-7 {
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.emotion-22 .emotion-7 {
  background: #ffffff;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  width: 20px;
  height: 20px;
}

.emotion-22 .emotion-5 {
  background: #f44336;
  left: 13px;
  height: 10px;
}

.emotion-22 .emotion-9 {
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #f6f6fb;
}

.emotion-22 .emotion-1,
.emotion-22 .emotion-3 {
  line-height: 16px;
}

.emotion-22 .emotion-1 {
  padding-right: 20px;
}

.emotion-22 .emotion-3 {
  padding-left: 20px;
}

.emotion-22 .emotion-1 {
  display: none;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      checked=""
      class=" emotion-10 emotion-11"
    >
      <div
        class="emotion-8 emotion-9"
      >
        <span
          class="emotion-0 emotion-1"
        >
          ON
        </span>
        <span
          class="emotion-2 emotion-3"
        >
          OFF
        </span>
        <span
          class="emotion-6 emotion-7"
        >
          <span
            class="emotion-4 emotion-5"
          />
        </span>
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class=" emotion-22 emotion-11"
    >
      <div
        class="emotion-8 emotion-9"
      >
        <span
          class="emotion-0 emotion-1"
        >
          ON
        </span>
        <span
          class="emotion-2 emotion-3"
        >
          OFF
        </span>
        <span
          class="emotion-6 emotion-7"
        >
          <span
            class="emotion-4 emotion-5"
          />
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Switch demo -- disabled 1`] = `
.emotion-8 {
  position: relative;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.emotion-0 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: block;
}

.emotion-2 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: block;
}

.emotion-6 {
  position: absolute;
  display: inline-block;
  left: -1px;
  top: -2px;
  border-radius: 2px;
  box-sizing: border-box;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.emotion-4 {
  position: absolute;
  display: inline-block;
  left: 18px;
  top: 4px;
  width: 2px;
  height: 16px;
  border-radius: 1px;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.emotion-10 {
  position: relative;
  border-radius: 2px;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  background: #ffffff;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  border-width: 1px;
  line-height: 16px;
}

.emotion-10:hover {
  border-color: #3357df;
}

.emotion-10:hover .emotion-7 {
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.emotion-10 .emotion-7 {
  background: #ffffff;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  width: 20px;
  height: 20px;
}

.emotion-10 .emotion-5 {
  background: #f44336;
  left: 13px;
  height: 10px;
}

.emotion-10 .emotion-9 {
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #f6f6fb;
}

.emotion-10 .emotion-1,
.emotion-10 .emotion-3 {
  line-height: 16px;
}

.emotion-10 .emotion-1 {
  padding-right: 20px;
}

.emotion-10 .emotion-3 {
  padding-left: 20px;
}

.emotion-10 .emotion-1 {
  display: none;
}

.emotion-22 {
  position: relative;
  border-radius: 2px;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  background: #ffffff;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  border-width: 1px;
  line-height: 16px;
  border-color: #cccccc;
  cursor: not-allowed;
}

.emotion-22 .emotion-7 {
  background: #ffffff;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  width: 20px;
  height: 20px;
}

.emotion-22 .emotion-5 {
  background: #f44336;
  left: 13px;
  height: 10px;
}

.emotion-22 .emotion-9 {
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #f6f6fb;
}

.emotion-22 .emotion-1,
.emotion-22 .emotion-3 {
  line-height: 16px;
}

.emotion-22 .emotion-1 {
  padding-right: 20px;
}

.emotion-22 .emotion-3 {
  padding-left: 20px;
}

.emotion-22 .emotion-1 {
  display: none;
}

.emotion-22 .emotion-9 {
  color: #cccccc;
  border-color: #d9d9d9;
  box-shadow: none;
  background: #f7f7f7;
}

.emotion-22 .emotion-5 {
  background: #cccccc;
}

.emotion-8 {
  position: relative;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.emotion-0 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: block;
}

.emotion-2 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: block;
}

.emotion-6 {
  position: absolute;
  display: inline-block;
  left: -1px;
  top: -2px;
  border-radius: 2px;
  box-sizing: border-box;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.emotion-4 {
  position: absolute;
  display: inline-block;
  left: 18px;
  top: 4px;
  width: 2px;
  height: 16px;
  border-radius: 1px;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.emotion-10 {
  position: relative;
  border-radius: 2px;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  background: #ffffff;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  border-width: 1px;
  line-height: 16px;
}

.emotion-10:hover {
  border-color: #3357df;
}

.emotion-10:hover .emotion-7 {
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.emotion-10 .emotion-7 {
  background: #ffffff;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  width: 20px;
  height: 20px;
}

.emotion-10 .emotion-5 {
  background: #f44336;
  left: 13px;
  height: 10px;
}

.emotion-10 .emotion-9 {
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #f6f6fb;
}

.emotion-10 .emotion-1,
.emotion-10 .emotion-3 {
  line-height: 16px;
}

.emotion-10 .emotion-1 {
  padding-right: 20px;
}

.emotion-10 .emotion-3 {
  padding-left: 20px;
}

.emotion-10 .emotion-1 {
  display: none;
}

.emotion-22 {
  position: relative;
  border-radius: 2px;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  background: #ffffff;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  border-width: 1px;
  line-height: 16px;
  border-color: #cccccc;
  cursor: not-allowed;
}

.emotion-22 .emotion-7 {
  background: #ffffff;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  width: 20px;
  height: 20px;
}

.emotion-22 .emotion-5 {
  background: #f44336;
  left: 13px;
  height: 10px;
}

.emotion-22 .emotion-9 {
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #f6f6fb;
}

.emotion-22 .emotion-1,
.emotion-22 .emotion-3 {
  line-height: 16px;
}

.emotion-22 .emotion-1 {
  padding-right: 20px;
}

.emotion-22 .emotion-3 {
  padding-left: 20px;
}

.emotion-22 .emotion-1 {
  display: none;
}

.emotion-22 .emotion-9 {
  color: #cccccc;
  border-color: #d9d9d9;
  box-shadow: none;
  background: #f7f7f7;
}

.emotion-22 .emotion-5 {
  background: #cccccc;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class=" emotion-10 emotion-11"
    >
      <div
        class="emotion-8 emotion-9"
      >
        <span
          class="emotion-0 emotion-1"
        >
          ON
        </span>
        <span
          class="emotion-2 emotion-3"
        >
          OFF
        </span>
        <span
          class="emotion-6 emotion-7"
        >
          <span
            class="emotion-4 emotion-5"
          />
        </span>
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class=" emotion-22 emotion-11"
      disabled=""
    >
      <div
        class="emotion-8 emotion-9"
      >
        <span
          class="emotion-0 emotion-1"
        >
          ON
        </span>
        <span
          class="emotion-2 emotion-3"
        >
          OFF
        </span>
        <span
          class="emotion-6 emotion-7"
        >
          <span
            class="emotion-4 emotion-5"
          />
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Switch demo -- onTextAndOffText 1`] = `
.emotion-8 {
  position: relative;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.emotion-0 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: block;
}

.emotion-2 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: block;
}

.emotion-6 {
  position: absolute;
  display: inline-block;
  left: -1px;
  top: -2px;
  border-radius: 2px;
  box-sizing: border-box;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.emotion-4 {
  position: absolute;
  display: inline-block;
  left: 18px;
  top: 4px;
  width: 2px;
  height: 16px;
  border-radius: 1px;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.emotion-10 {
  position: relative;
  border-radius: 2px;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  background: #ffffff;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  border-width: 1px;
  line-height: 16px;
}

.emotion-10:hover {
  border-color: #3357df;
}

.emotion-10:hover .emotion-7 {
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.emotion-10 .emotion-7 {
  background: #ffffff;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  width: 20px;
  height: 20px;
}

.emotion-10 .emotion-5 {
  background: #f44336;
  left: 13px;
  height: 10px;
}

.emotion-10 .emotion-9 {
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #f6f6fb;
}

.emotion-10 .emotion-1,
.emotion-10 .emotion-3 {
  line-height: 16px;
}

.emotion-10 .emotion-1 {
  padding-right: 20px;
}

.emotion-10 .emotion-3 {
  padding-left: 20px;
}

.emotion-10 .emotion-1 {
  display: none;
}

.emotion-8 {
  position: relative;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.emotion-0 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: block;
}

.emotion-2 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: block;
}

.emotion-6 {
  position: absolute;
  display: inline-block;
  left: -1px;
  top: -2px;
  border-radius: 2px;
  box-sizing: border-box;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.emotion-4 {
  position: absolute;
  display: inline-block;
  left: 18px;
  top: 4px;
  width: 2px;
  height: 16px;
  border-radius: 1px;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.emotion-10 {
  position: relative;
  border-radius: 2px;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  background: #ffffff;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  border-width: 1px;
  line-height: 16px;
}

.emotion-10:hover {
  border-color: #3357df;
}

.emotion-10:hover .emotion-7 {
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.emotion-10 .emotion-7 {
  background: #ffffff;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  width: 20px;
  height: 20px;
}

.emotion-10 .emotion-5 {
  background: #f44336;
  left: 13px;
  height: 10px;
}

.emotion-10 .emotion-9 {
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #f6f6fb;
}

.emotion-10 .emotion-1,
.emotion-10 .emotion-3 {
  line-height: 16px;
}

.emotion-10 .emotion-1 {
  padding-right: 20px;
}

.emotion-10 .emotion-3 {
  padding-left: 20px;
}

.emotion-10 .emotion-1 {
  display: none;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class=" emotion-10 emotion-11"
    >
      <div
        class="emotion-8 emotion-9"
      >
        <span
          class="emotion-0 emotion-1"
        >
          ON
        </span>
        <span
          class="emotion-2 emotion-3"
        >
          OFF
        </span>
        <span
          class="emotion-6 emotion-7"
        >
          <span
            class="emotion-4 emotion-5"
          />
        </span>
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class=" emotion-10 emotion-11"
    >
      <div
        class="emotion-8 emotion-9"
      >
        <span
          class="emotion-0 emotion-1"
        >
          开
        </span>
        <span
          class="emotion-2 emotion-3"
        >
          关
        </span>
        <span
          class="emotion-6 emotion-7"
        >
          <span
            class="emotion-4 emotion-5"
          />
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Switch demo -- size 1`] = `
.emotion-8 {
  position: relative;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.emotion-0 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: block;
}

.emotion-2 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: block;
}

.emotion-6 {
  position: absolute;
  display: inline-block;
  left: -1px;
  top: -2px;
  border-radius: 2px;
  box-sizing: border-box;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.emotion-4 {
  position: absolute;
  display: inline-block;
  left: 18px;
  top: 4px;
  width: 2px;
  height: 16px;
  border-radius: 1px;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.emotion-22 {
  position: relative;
  border-radius: 2px;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  background: #ffffff;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  border-width: 1px;
  line-height: 16px;
}

.emotion-22:hover {
  border-color: #3357df;
}

.emotion-22:hover .emotion-7 {
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.emotion-22 .emotion-7 {
  background: #ffffff;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  width: 20px;
  height: 20px;
}

.emotion-22 .emotion-5 {
  background: #f44336;
  left: 13px;
  height: 10px;
}

.emotion-22 .emotion-9 {
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #f6f6fb;
}

.emotion-22 .emotion-1,
.emotion-22 .emotion-3 {
  line-height: 16px;
}

.emotion-22 .emotion-1 {
  padding-right: 20px;
}

.emotion-22 .emotion-3 {
  padding-left: 20px;
}

.emotion-22 .emotion-1 {
  display: none;
}

.emotion-10 {
  position: relative;
  border-radius: 2px;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  background: #ffffff;
  height: 24px;
  width: 45px;
  padding: 1px;
  border: 1px solid #c3cad9;
  border-width: 0;
}

.emotion-10:hover {
  border-color: #3357df;
}

.emotion-10:hover .emotion-7 {
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.emotion-10 .emotion-7 {
  background: #ffffff;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  width: 24px;
  height: 24px;
}

.emotion-10 .emotion-5 {
  background: #f44336;
  left: 13px;
  height: 14px;
}

.emotion-10 .emotion-9 {
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #f6f6fb;
}

.emotion-10 .emotion-1,
.emotion-10 .emotion-3 {
  display: none;
}

.emotion-10 .emotion-1 {
  display: none;
}

.emotion-34 {
  position: relative;
  border-radius: 2px;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  background: #ffffff;
  height: 32px;
  width: 100px;
  padding: 4px;
  border: 1px solid #c3cad9;
  border-width: 1px;
  line-height: 22px;
}

.emotion-34:hover {
  border-color: #3357df;
}

.emotion-34:hover .emotion-7 {
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.emotion-34 .emotion-7 {
  background: #ffffff;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  width: 24px;
  height: 24px;
}

.emotion-34 .emotion-5 {
  background: #f44336;
  left: 18px;
  height: 14px;
}

.emotion-34 .emotion-9 {
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #f6f6fb;
}

.emotion-34 .emotion-1 {
  padding-right: 26px;
}

.emotion-34 .emotion-3 {
  padding-left: 26px;
}

.emotion-34 .emotion-1 {
  display: none;
}

.emotion-8 {
  position: relative;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.emotion-0 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: block;
}

.emotion-2 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: block;
}

.emotion-6 {
  position: absolute;
  display: inline-block;
  left: -1px;
  top: -2px;
  border-radius: 2px;
  box-sizing: border-box;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.emotion-4 {
  position: absolute;
  display: inline-block;
  left: 18px;
  top: 4px;
  width: 2px;
  height: 16px;
  border-radius: 1px;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.emotion-22 {
  position: relative;
  border-radius: 2px;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  background: #ffffff;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  border-width: 1px;
  line-height: 16px;
}

.emotion-22:hover {
  border-color: #3357df;
}

.emotion-22:hover .emotion-7 {
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.emotion-22 .emotion-7 {
  background: #ffffff;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  width: 20px;
  height: 20px;
}

.emotion-22 .emotion-5 {
  background: #f44336;
  left: 13px;
  height: 10px;
}

.emotion-22 .emotion-9 {
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #f6f6fb;
}

.emotion-22 .emotion-1,
.emotion-22 .emotion-3 {
  line-height: 16px;
}

.emotion-22 .emotion-1 {
  padding-right: 20px;
}

.emotion-22 .emotion-3 {
  padding-left: 20px;
}

.emotion-22 .emotion-1 {
  display: none;
}

.emotion-10 {
  position: relative;
  border-radius: 2px;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  background: #ffffff;
  height: 24px;
  width: 45px;
  padding: 1px;
  border: 1px solid #c3cad9;
  border-width: 0;
}

.emotion-10:hover {
  border-color: #3357df;
}

.emotion-10:hover .emotion-7 {
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.emotion-10 .emotion-7 {
  background: #ffffff;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  width: 24px;
  height: 24px;
}

.emotion-10 .emotion-5 {
  background: #f44336;
  left: 13px;
  height: 14px;
}

.emotion-10 .emotion-9 {
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #f6f6fb;
}

.emotion-10 .emotion-1,
.emotion-10 .emotion-3 {
  display: none;
}

.emotion-10 .emotion-1 {
  display: none;
}

.emotion-34 {
  position: relative;
  border-radius: 2px;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  background: #ffffff;
  height: 32px;
  width: 100px;
  padding: 4px;
  border: 1px solid #c3cad9;
  border-width: 1px;
  line-height: 22px;
}

.emotion-34:hover {
  border-color: #3357df;
}

.emotion-34:hover .emotion-7 {
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.emotion-34 .emotion-7 {
  background: #ffffff;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  width: 24px;
  height: 24px;
}

.emotion-34 .emotion-5 {
  background: #f44336;
  left: 18px;
  height: 14px;
}

.emotion-34 .emotion-9 {
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #f6f6fb;
}

.emotion-34 .emotion-1 {
  padding-right: 26px;
}

.emotion-34 .emotion-3 {
  padding-left: 26px;
}

.emotion-34 .emotion-1 {
  display: none;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class=" emotion-10 emotion-11"
    >
      <div
        class="emotion-8 emotion-9"
      >
        <span
          class="emotion-0 emotion-1"
        >
          ON
        </span>
        <span
          class="emotion-2 emotion-3"
        >
          OFF
        </span>
        <span
          class="emotion-6 emotion-7"
        >
          <span
            class="emotion-4 emotion-5"
          />
        </span>
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class=" emotion-22 emotion-11"
    >
      <div
        class="emotion-8 emotion-9"
      >
        <span
          class="emotion-0 emotion-1"
        >
          ON
        </span>
        <span
          class="emotion-2 emotion-3"
        >
          OFF
        </span>
        <span
          class="emotion-6 emotion-7"
        >
          <span
            class="emotion-4 emotion-5"
          />
        </span>
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class=" emotion-34 emotion-11"
    >
      <div
        class="emotion-8 emotion-9"
      >
        <span
          class="emotion-0 emotion-1"
        >
          ON
        </span>
        <span
          class="emotion-2 emotion-3"
        >
          OFF
        </span>
        <span
          class="emotion-6 emotion-7"
        >
          <span
            class="emotion-4 emotion-5"
          />
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Switch demo -- switch 1`] = `
.emotion-60 {
  position: relative;
  border-radius: 2px;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  background: #ffffff;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  border-width: 1px;
  line-height: 16px;
}

.emotion-60:hover {
  border-color: #3357df;
}

.emotion-60:hover .emotion-36 {
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.emotion-60 .emotion-36 {
  background: #ffffff;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  width: 20px;
  height: 20px;
}

.emotion-60 .emotion-34 {
  background: #f44336;
  left: 13px;
  height: 10px;
}

.emotion-60 .emotion-38 {
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #f6f6fb;
}

.emotion-60 .emotion-30,
.emotion-60 .emotion-32 {
  line-height: 16px;
}

.emotion-60 .emotion-30 {
  padding-right: 20px;
}

.emotion-60 .emotion-32 {
  padding-left: 20px;
}

.emotion-60 .emotion-38 {
  color: #4cd964;
  border-color: #9effa5;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #edfff2;
}

.emotion-60 .emotion-36 {
  left: 100%;
  margin-left: -19px;
}

.emotion-60 .emotion-34 {
  background: #4cd964;
}

.emotion-60 .emotion-32 {
  display: none;
}

.emotion-37 {
  position: relative;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.emotion-29 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: block;
}

.emotion-31 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: block;
}

.emotion-35 {
  position: absolute;
  display: inline-block;
  left: -1px;
  top: -2px;
  border-radius: 2px;
  box-sizing: border-box;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.emotion-33 {
  position: absolute;
  display: inline-block;
  left: 18px;
  top: 4px;
  width: 2px;
  height: 16px;
  border-radius: 1px;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.emotion-39 {
  position: relative;
  border-radius: 2px;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  background: #ffffff;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  border-width: 1px;
  line-height: 16px;
}

.emotion-39:hover {
  border-color: #3357df;
}

.emotion-39:hover .emotion-36 {
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.emotion-39 .emotion-36 {
  background: #ffffff;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  width: 20px;
  height: 20px;
}

.emotion-39 .emotion-34 {
  background: #f44336;
  left: 13px;
  height: 10px;
}

.emotion-39 .emotion-38 {
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #f6f6fb;
}

.emotion-39 .emotion-30,
.emotion-39 .emotion-32 {
  line-height: 16px;
}

.emotion-39 .emotion-30 {
  padding-right: 20px;
}

.emotion-39 .emotion-32 {
  padding-left: 20px;
}

.emotion-39 .emotion-30 {
  display: none;
}

.emotion-94 .uc-fe-form-item {
  margin-bottom: 16px;
}

.emotion-94 .uc-fe-form-item:last-child {
  margin-bottom: 0;
}

.emotion-24 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.emotion-24:before,
.emotion-24:after {
  content: ' ';
  display: table;
}

.emotion-24:after {
  clear: both;
}

.emotion-24 > .uc-fe-col {
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-1 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 25%;
  padding-top: 4px;
  line-height: 20px;
  word-break: break-all;
}

.emotion-21 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.emotion-21 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.emotion-18 {
  position: relative;
  margin-bottom: -8px;
}

.emotion-18 .uc-fe-radio-styletype-default,
.emotion-18 .uc-fe-radio-styletype-tag {
  margin-right: 8px;
  margin-bottom: 8px;
}

.emotion-18 .uc-fe-radio-styletype-default:last-child,
.emotion-18 .uc-fe-radio-styletype-tag:last-child {
  margin-right: 0;
}

.emotion-18 .uc-fe-radio-styletype-card {
  margin-right: 12px;
  margin-bottom: 8px;
}

.emotion-18 .uc-fe-radio-styletype-card:last-child {
  margin-right: 0;
}

.emotion-18 .uc-fe-radio-styletype-text+.uc-fe-radio-styletype-text {
  margin-left: -1px;
}

.emotion-18 .uc-fe-radio-styletype-button {
  margin-right: -1px;
  margin-bottom: 8px;
}

.emotion-18 .uc-fe-radio-styletype-button:first-of-type {
  border-radius: 2px 0 0 2px;
}

.emotion-18 .uc-fe-radio-styletype-button:last-of-type {
  border-radius: 0 2px 2px 0;
  margin-right: 0;
}

.emotion-6 {
  color: #526075;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  min-height: 28px;
  line-height: 28px;
  font-size: 0;
  color: #0a1633;
}

.emotion-6 > * {
  font-size: 12px;
}

.emotion-6 .uc-fe-radio-icon-wrap {
  display: inline-block;
  box-sizing: border-box;
  overflow: hidden;
  position: relative;
  width: 14px;
  height: 14px;
  border: 1px solid #c3cad9;
  border-radius: 8px;
  vertical-align: middle;
}

.emotion-6 .uc-fe-radio-icon-wrap .uc-fe-radio-icon {
  visibility: hidden;
  opacity: 0;
  position: absolute;
  top: -1px;
  left: -1px;
}

.emotion-6 .uc-fe-radio-content {
  display: inline-block;
  vertical-align: middle;
  max-height: 100%;
  margin-left: 8px;
}

.emotion-6:hover .uc-fe-radio-icon-wrap,
.emotion-6.uc-fe-radio-checked .uc-fe-radio-icon-wrap {
  border-color: #3860f4;
}

.emotion-6.uc-fe-radio-checked .uc-fe-radio-icon {
  visibility: visible;
  opacity: 1;
  fill: #3860f4;
}

.emotion-6.uc-fe-radio-disabled {
  cursor: default;
  color: #cccccc;
}

.emotion-6.uc-fe-radio-disabled .uc-fe-radio-icon-wrap {
  border-color: #d9d9d9;
  background: #f7f7f7;
}

.emotion-6.uc-fe-radio-disabled.uc-fe-radio-checked .uc-fe-radio-icon {
  fill: #cccccc;
}

.emotion-6.uc-fe-radio-disabled.uc-fe-radio-checked .uc-fe-radio-icon-wrap {
  background: none;
}

.emotion-3 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  width: 14px;
  height: 14px;
}

.emotion-73 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  box-sizing: border-box;
  border-radius: 2px;
  height: 28px;
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
}

.emotion-73.uc-fe-input-block {
  display: block;
}

.emotion-73 input {
  vertical-align: middle;
  display: table-cell;
  box-sizing: border-box;
  width: 100%;
  padding: 0px 8px;
  margin: 0;
  font-size: inherit;
  color: inherit;
}

.emotion-73 input,
.emotion-73 input:hover,
.emotion-73 input:focus {
  border: none;
  outline: none;
  background: none;
}

.emotion-73:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.emotion-73 input {
  line-height: 26px;
  height: 26px;
}

.emotion-73 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-73 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-73 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-73 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-71 {
  display: table;
  width: 100%;
}

.emotion-60 {
  position: relative;
  border-radius: 2px;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  background: #ffffff;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  border-width: 1px;
  line-height: 16px;
}

.emotion-60:hover {
  border-color: #3357df;
}

.emotion-60:hover .emotion-36 {
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.emotion-60 .emotion-36 {
  background: #ffffff;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  width: 20px;
  height: 20px;
}

.emotion-60 .emotion-34 {
  background: #f44336;
  left: 13px;
  height: 10px;
}

.emotion-60 .emotion-38 {
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #f6f6fb;
}

.emotion-60 .emotion-30,
.emotion-60 .emotion-32 {
  line-height: 16px;
}

.emotion-60 .emotion-30 {
  padding-right: 20px;
}

.emotion-60 .emotion-32 {
  padding-left: 20px;
}

.emotion-60 .emotion-38 {
  color: #4cd964;
  border-color: #9effa5;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #edfff2;
}

.emotion-60 .emotion-36 {
  left: 100%;
  margin-left: -19px;
}

.emotion-60 .emotion-34 {
  background: #4cd964;
}

.emotion-60 .emotion-32 {
  display: none;
}

.emotion-37 {
  position: relative;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.emotion-29 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: block;
}

.emotion-31 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: block;
}

.emotion-35 {
  position: absolute;
  display: inline-block;
  left: -1px;
  top: -2px;
  border-radius: 2px;
  box-sizing: border-box;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.emotion-33 {
  position: absolute;
  display: inline-block;
  left: 18px;
  top: 4px;
  width: 2px;
  height: 16px;
  border-radius: 1px;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.emotion-39 {
  position: relative;
  border-radius: 2px;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  background: #ffffff;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  border-width: 1px;
  line-height: 16px;
}

.emotion-39:hover {
  border-color: #3357df;
}

.emotion-39:hover .emotion-36 {
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.emotion-39 .emotion-36 {
  background: #ffffff;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  width: 20px;
  height: 20px;
}

.emotion-39 .emotion-34 {
  background: #f44336;
  left: 13px;
  height: 10px;
}

.emotion-39 .emotion-38 {
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #f6f6fb;
}

.emotion-39 .emotion-30,
.emotion-39 .emotion-32 {
  line-height: 16px;
}

.emotion-39 .emotion-30 {
  padding-right: 20px;
}

.emotion-39 .emotion-32 {
  padding-left: 20px;
}

.emotion-39 .emotion-30 {
  display: none;
}

.emotion-94 .uc-fe-form-item {
  margin-bottom: 16px;
}

.emotion-94 .uc-fe-form-item:last-child {
  margin-bottom: 0;
}

.emotion-24 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.emotion-24:before,
.emotion-24:after {
  content: ' ';
  display: table;
}

.emotion-24:after {
  clear: both;
}

.emotion-24 > .uc-fe-col {
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-1 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 25%;
  padding-top: 4px;
  line-height: 20px;
  word-break: break-all;
}

.emotion-21 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.emotion-21 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.emotion-18 {
  position: relative;
  margin-bottom: -8px;
}

.emotion-18 .uc-fe-radio-styletype-default,
.emotion-18 .uc-fe-radio-styletype-tag {
  margin-right: 8px;
  margin-bottom: 8px;
}

.emotion-18 .uc-fe-radio-styletype-default:last-child,
.emotion-18 .uc-fe-radio-styletype-tag:last-child {
  margin-right: 0;
}

.emotion-18 .uc-fe-radio-styletype-card {
  margin-right: 12px;
  margin-bottom: 8px;
}

.emotion-18 .uc-fe-radio-styletype-card:last-child {
  margin-right: 0;
}

.emotion-18 .uc-fe-radio-styletype-text+.uc-fe-radio-styletype-text {
  margin-left: -1px;
}

.emotion-18 .uc-fe-radio-styletype-button {
  margin-right: -1px;
  margin-bottom: 8px;
}

.emotion-18 .uc-fe-radio-styletype-button:first-of-type {
  border-radius: 2px 0 0 2px;
}

.emotion-18 .uc-fe-radio-styletype-button:last-of-type {
  border-radius: 0 2px 2px 0;
  margin-right: 0;
}

.emotion-6 {
  color: #526075;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  min-height: 28px;
  line-height: 28px;
  font-size: 0;
  color: #0a1633;
}

.emotion-6 > * {
  font-size: 12px;
}

.emotion-6 .uc-fe-radio-icon-wrap {
  display: inline-block;
  box-sizing: border-box;
  overflow: hidden;
  position: relative;
  width: 14px;
  height: 14px;
  border: 1px solid #c3cad9;
  border-radius: 8px;
  vertical-align: middle;
}

.emotion-6 .uc-fe-radio-icon-wrap .uc-fe-radio-icon {
  visibility: hidden;
  opacity: 0;
  position: absolute;
  top: -1px;
  left: -1px;
}

.emotion-6 .uc-fe-radio-content {
  display: inline-block;
  vertical-align: middle;
  max-height: 100%;
  margin-left: 8px;
}

.emotion-6:hover .uc-fe-radio-icon-wrap,
.emotion-6.uc-fe-radio-checked .uc-fe-radio-icon-wrap {
  border-color: #3860f4;
}

.emotion-6.uc-fe-radio-checked .uc-fe-radio-icon {
  visibility: visible;
  opacity: 1;
  fill: #3860f4;
}

.emotion-6.uc-fe-radio-disabled {
  cursor: default;
  color: #cccccc;
}

.emotion-6.uc-fe-radio-disabled .uc-fe-radio-icon-wrap {
  border-color: #d9d9d9;
  background: #f7f7f7;
}

.emotion-6.uc-fe-radio-disabled.uc-fe-radio-checked .uc-fe-radio-icon {
  fill: #cccccc;
}

.emotion-6.uc-fe-radio-disabled.uc-fe-radio-checked .uc-fe-radio-icon-wrap {
  background: none;
}

.emotion-3 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  width: 14px;
  height: 14px;
}

.emotion-73 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  box-sizing: border-box;
  border-radius: 2px;
  height: 28px;
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
}

.emotion-73.uc-fe-input-block {
  display: block;
}

.emotion-73 input {
  vertical-align: middle;
  display: table-cell;
  box-sizing: border-box;
  width: 100%;
  padding: 0px 8px;
  margin: 0;
  font-size: inherit;
  color: inherit;
}

.emotion-73 input,
.emotion-73 input:hover,
.emotion-73 input:focus {
  border: none;
  outline: none;
  background: none;
}

.emotion-73:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.emotion-73 input {
  line-height: 26px;
  height: 26px;
}

.emotion-73 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-73 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-73 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-73 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-71 {
  display: table;
  width: 100%;
}

<div>
  <form
    class="uc-fe-form demo-form emotion-94 emotion-95"
  >
    <div
      class="uc-fe-row uc-fe-form-item emotion-23 emotion-24 emotion-25"
    >
      <div
        class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
        span="3"
      >
        size
      </div>
      <div
        class="uc-fe-col uc-fe-form-controller emotion-20 emotion-21 emotion-2"
        span="9"
      >
        <div
          class="emotion-18 emotion-72"
        >
          <span
            class="uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default emotion-5 emotion-6 emotion-7"
          >
            <span
              class="uc-fe-radio-icon-wrap"
            >
              <svg
                class="uc-fe-radio-icon emotion-3 emotion-4"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              sm
            </span>
          </span>
          <span
            checked=""
            class="uc-fe-radio uc-fe-radio-checked uc-fe-radio-size-md uc-fe-radio-styletype-default emotion-5 emotion-6 emotion-7"
          >
            <span
              class="uc-fe-radio-icon-wrap"
            >
              <svg
                class="uc-fe-radio-icon emotion-3 emotion-4"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              md
            </span>
          </span>
          <span
            class="uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default emotion-5 emotion-6 emotion-7"
          >
            <span
              class="uc-fe-radio-icon-wrap"
            >
              <svg
                class="uc-fe-radio-icon emotion-3 emotion-4"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              lg
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="uc-fe-row uc-fe-form-item emotion-23 emotion-24 emotion-25"
    >
      <div
        class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
        span="3"
      >
        disabled
      </div>
      <div
        class="uc-fe-col uc-fe-form-controller emotion-20 emotion-21 emotion-2"
        span="9"
      >
        <div
          class=" emotion-39 emotion-40"
        >
          <div
            class="emotion-37 emotion-38"
          >
            <span
              class="emotion-29 emotion-30"
            >
              ON
            </span>
            <span
              class="emotion-31 emotion-32"
            >
              OFF
            </span>
            <span
              class="emotion-35 emotion-36"
            >
              <span
                class="emotion-33 emotion-34"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="uc-fe-row uc-fe-form-item emotion-23 emotion-24 emotion-25"
    >
      <div
        class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
        span="3"
      >
        checked
      </div>
      <div
        class="uc-fe-col uc-fe-form-controller emotion-20 emotion-21 emotion-2"
        span="9"
      >
        <div
          checked=""
          class=" emotion-60 emotion-40"
        >
          <div
            class="emotion-37 emotion-38"
          >
            <span
              class="emotion-29 emotion-30"
            >
              ON
            </span>
            <span
              class="emotion-31 emotion-32"
            >
              OFF
            </span>
            <span
              class="emotion-35 emotion-36"
            >
              <span
                class="emotion-33 emotion-34"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="uc-fe-row uc-fe-form-item emotion-23 emotion-24 emotion-25"
    >
      <div
        class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
        span="3"
      >
        onText
      </div>
      <div
        class="uc-fe-col uc-fe-form-controller emotion-20 emotion-21 emotion-2"
        span="9"
      >
        <span
          class="uc-fe-input emotion-73 emotion-74"
        >
          <span
            class="emotion-71 emotion-72"
          >
            <input
              value="ON"
            />
          </span>
        </span>
      </div>
    </div>
    <div
      class="uc-fe-row uc-fe-form-item emotion-23 emotion-24 emotion-25"
    >
      <div
        class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
        span="3"
      >
        offText
      </div>
      <div
        class="uc-fe-col uc-fe-form-controller emotion-20 emotion-21 emotion-2"
        span="9"
      >
        <span
          class="uc-fe-input emotion-73 emotion-74"
        >
          <span
            class="emotion-71 emotion-72"
          >
            <input
              value="OFF"
            />
          </span>
        </span>
      </div>
    </div>
  </form>
  <div
    class="demo-wrap"
  >
    <div
      checked=""
      class=" emotion-60 emotion-40"
    >
      <div
        class="emotion-37 emotion-38"
      >
        <span
          class="emotion-29 emotion-30"
        >
          ON
        </span>
        <span
          class="emotion-31 emotion-32"
        >
          OFF
        </span>
        <span
          class="emotion-35 emotion-36"
        >
          <span
            class="emotion-33 emotion-34"
          />
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Switch demo -- uncontrolled 1`] = `
.emotion-10 {
  position: relative;
  border-radius: 2px;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  background: #ffffff;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  border-width: 1px;
  line-height: 16px;
}

.emotion-10:hover {
  border-color: #3357df;
}

.emotion-10:hover .emotion-7 {
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.emotion-10 .emotion-7 {
  background: #ffffff;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  width: 20px;
  height: 20px;
}

.emotion-10 .emotion-5 {
  background: #f44336;
  left: 13px;
  height: 10px;
}

.emotion-10 .emotion-9 {
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #f6f6fb;
}

.emotion-10 .emotion-1,
.emotion-10 .emotion-3 {
  line-height: 16px;
}

.emotion-10 .emotion-1 {
  padding-right: 20px;
}

.emotion-10 .emotion-3 {
  padding-left: 20px;
}

.emotion-10 .emotion-9 {
  color: #4cd964;
  border-color: #9effa5;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #edfff2;
}

.emotion-10 .emotion-7 {
  left: 100%;
  margin-left: -19px;
}

.emotion-10 .emotion-5 {
  background: #4cd964;
}

.emotion-10 .emotion-3 {
  display: none;
}

.emotion-8 {
  position: relative;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.emotion-0 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: block;
}

.emotion-2 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: block;
}

.emotion-6 {
  position: absolute;
  display: inline-block;
  left: -1px;
  top: -2px;
  border-radius: 2px;
  box-sizing: border-box;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.emotion-4 {
  position: absolute;
  display: inline-block;
  left: 18px;
  top: 4px;
  width: 2px;
  height: 16px;
  border-radius: 1px;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.emotion-10 {
  position: relative;
  border-radius: 2px;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  background: #ffffff;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  border-width: 1px;
  line-height: 16px;
}

.emotion-10:hover {
  border-color: #3357df;
}

.emotion-10:hover .emotion-7 {
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.emotion-10 .emotion-7 {
  background: #ffffff;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  width: 20px;
  height: 20px;
}

.emotion-10 .emotion-5 {
  background: #f44336;
  left: 13px;
  height: 10px;
}

.emotion-10 .emotion-9 {
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #f6f6fb;
}

.emotion-10 .emotion-1,
.emotion-10 .emotion-3 {
  line-height: 16px;
}

.emotion-10 .emotion-1 {
  padding-right: 20px;
}

.emotion-10 .emotion-3 {
  padding-left: 20px;
}

.emotion-10 .emotion-9 {
  color: #4cd964;
  border-color: #9effa5;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #edfff2;
}

.emotion-10 .emotion-7 {
  left: 100%;
  margin-left: -19px;
}

.emotion-10 .emotion-5 {
  background: #4cd964;
}

.emotion-10 .emotion-3 {
  display: none;
}

.emotion-8 {
  position: relative;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.emotion-0 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: block;
}

.emotion-2 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: block;
}

.emotion-6 {
  position: absolute;
  display: inline-block;
  left: -1px;
  top: -2px;
  border-radius: 2px;
  box-sizing: border-box;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.emotion-4 {
  position: absolute;
  display: inline-block;
  left: 18px;
  top: 4px;
  width: 2px;
  height: 16px;
  border-radius: 1px;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      checked=""
      class=" emotion-10 emotion-11"
    >
      <div
        class="emotion-8 emotion-9"
      >
        <span
          class="emotion-0 emotion-1"
        >
          ON
        </span>
        <span
          class="emotion-2 emotion-3"
        >
          OFF
        </span>
        <span
          class="emotion-6 emotion-7"
        >
          <span
            class="emotion-4 emotion-5"
          />
        </span>
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      checked=""
      class=" emotion-10 emotion-11"
    >
      <div
        class="emotion-8 emotion-9"
      >
        <span
          class="emotion-0 emotion-1"
        >
          ON
        </span>
        <span
          class="emotion-2 emotion-3"
        >
          OFF
        </span>
        <span
          class="emotion-6 emotion-7"
        >
          <span
            class="emotion-4 emotion-5"
          />
        </span>
      </div>
    </div>
  </div>
</div>
`;
